--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </nav>
       </div></header>
     <section class="u-align-left u-clearfix u-image u-section-1" id="carousel_3e8e" data-image-width="1980" data-image-height="1350">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+      <div class="u-clearfix u-sheet u-sheet-1">
         <div class="data-layout-selected u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
           <div class="u-gutter-0 u-layout">
             <div class="u-layout-row">
