--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     
     
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-11bc"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1">Beispieltext. Klicke, um das Textelement auszuwählen.</p>
+        <p class="u-small-text u-text u-text-variant u-text-1"></p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
       <a class="u-link" href="website-mockup" target="_blank">
